# WxBox

./: .clang-format  .gitattributes  .gitignore  README.md  config.h.in  meson.build  meson_options.txt  wxbox.cppcheck
WxBot/: meson.build  wxbot.cpp  wxbot.hpp  wxbot_test.cpp
WxBox/: main.cpp  mainwindow.ui
assets/: Info.plist  app.icns  wxbox.qrc  wxbox.rc  wxbox_quick_ui.qml  wxbox_quick_ui.qrc
assets/crashdumper/: Info.plist  crashdumper.icns  crashdumper.qrc  crashdumper.rc
assets/interact/: interact.rc
assets/themes/: GreenTheme.rcc
assets/themes/GreenTheme/: GreenTheme.qml  GreenTheme.qrc  GreenTheme.qss
assets/translations/: en.qm  en.ts  zh_cn.qm  zh_cn.ts
assets/wxbot/: wxbot.rc
assets/xstyle/DefaultTheme/: DefaultTheme.qml  DefaultTheme.qrc  DefaultTheme.qss
assets/xstyle/quick/plugin/: XStyleQuickPlugin.qrc  XStyleThemeDock.js
assets/xstyle/quick/plugin/Theme/: Theme.qml  qmldir
assets/xstyle/quick/plugin/XStyleQuickWindow/: XStyleQuickWindow.qml  qmldir
conf/: features.yml  mac_features.yml  windows_features.yml
docs/: PC微信v3.5.0.46改动.docx  PC微信v3.6.0.18改动.docx  WxBot的wxbox模块命令测试用例.txt  WxBox - 产品规格说明书.docx  WxBox - 详细需求分析文档.docx  WxBox-v0.1.0 - 测试与使用.docx  WxBox目录结构.txt  ~$微信客户端逆向分析记录.docx
docs/structure/: WeChatContactItem.CSX  WeChatMessageStructure.CSX
docs/uml/: Plugin Virtual Machine交互图.mdj  WxBoxServer与WxBoxClient交互图.mdj
docs/windows_x32dbg_debug_database/: wechat_3.4.5.27.dd32
docs/x32dbg plugins/usecase/: main.cpp
docs/x32dbg plugins/xcontains/: .gitignore  CMakeLists.txt  README.md  cmake.toml
docs/x32dbg plugins/xcontains/.github/workflows/: build.yml
docs/x32dbg plugins/xcontains/cmake/: x64dbg.cmake
docs/x32dbg plugins/xcontains/src/: plugin.cpp  plugin.h  pluginmain.cpp  pluginmain.h
docs/原型图/: WxBox、WxBot与微信进程的交互模型.rp  WxBox界面原型.rp
features/: windows_features.yml
features/extra/windows/: v1.5.5.0.yml  v1.5.6.1.yml  v1.5.7.2.yml
features/windows/x86/: v3.4.5.27.yml  v3.5.0.46.yml  v3.6.0.18.yml
githooks/: pre-commit  setup_hook  setup_hook.bat
plugins/: chatgpt.lua.disabled  example.lua  example.lua.disabled  helpme.lua.disabled  wxbox_apis.txt  wxbox_module_apis.txt  wxbox_phone_test_case.txt
plugins/common/: url.lua
plugins/libs/async_request/: async_request.cpp  async_request.hpp  meson.build
plugins/libs/template/: README.md  meson.build  template.cpp  template.hpp
protos/: wxbox.proto
scripts/: generate_themes  generate_themes.bat  install_wxbox  install_wxbox.bat  pretty_format  pretty_format.bat  update_i18n  update_i18n.bat
src/WxBox/: about.cpp  about.h  about.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build
src/crack/: crack.cpp  crack.h  feature.cpp  feature.h  wx.cpp  wx.h
src/crashdumper/: crashdumper.cpp  crashdumper.h  crashdumper_dialog.cpp  crashdumper_dialog.h  crashdumper_dialog.ui  meson.build
src/interact/: interact.cpp  meson.build
src/plugin/: plugin.cpp  plugin.h  plugin_command_parser.cpp  plugin_command_parser.h  plugin_virtual_machine.cpp  plugin_virtual_machine.h  plugin_wechat_api_bridge.cpp  plugin_wechat_api_bridge.h
src/plugin/internal/: plugin_internal_functions.cpp  plugin_internal_functions.h  plugin_internal_modules.cpp  plugin_internal_modules.h
src/plugin/internal/module/: model_event.cpp  model_event.h  model_host_event.cpp  model_host_event.h  model_wechat_contact.cpp  model_wechat_contact.h  module_wxbox.cpp  module_wxbox.h
src/utils/: common.h  config.cpp  config.hpp  coredump.cpp  coredump.h  crack.cpp  crack.h  feature.cpp  feature.h  file.cpp  file.h  hook.cpp  hook.h  inject.cpp  inject.h  memory.cpp  memory.h  platform.cpp  platform.h  process.cpp  process.h  string.cpp  string.h  timer.cpp  timer.h  traits.cpp  traits.h  wx.cpp  wx.h
src/wxbot/: meson.build  wxbot.cpp  wxbot.hpp  wxbot_client_response_wrapper.cpp  wxbot_intercept_handler.cpp  wxbot_plugin_api_wrapper.cpp  wxbot_plugin_handler.cpp  wxbot_test.cpp  wxbot_wechat_api_wrapper.cpp  wxbox_client.cpp  wxbox_client.hpp
src/wxbox/: about.cpp  about.h  about.ui  app_config.hpp  app_log.hpp  contact_list_dialog.cpp  contact_list_dialog.h  download_dialog.cpp  download_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  setting_dialog.cpp  setting_dialog.h  wxbox_client_status_model.cpp  wxbox_client_status_model.h  wxbox_controller.cpp  wxbox_controller.h  wxbox_controller_error.h  wxbox_server.cpp  wxbox_server.hpp
src/wxbox/internal/: downloader.hpp  task.hpp  threadpool.hpp
src/wxbox/ui/: about.ui  contact_list_dialog.ui  download.ui  mainwindow.ui  setting_dialog.ui
src/xstyle/: xstyle.cpp  xstyle.h  xstylebutton.hpp  xstylecommandline.hpp  xstylecommon.h  xstylemenu.cpp  xstylemenu.h  xstylemessagebox.cpp  xstylemessagebox.h  xstylewindow.cpp  xstylewindow.h
src/xstyle/quick/: qtquick_xstylewindow.cpp  qtquick_xstylewindow.h
subprojects/: TitanEngine.wrap  frida-gum.wrap  grpc.wrap  grpc_debug.wrap  lua.wrap  spdlog.wrap  yaml-cpp.wrap
tests/: crack_test.cpp  frida_test.cpp  hook_test.cpp  main.cpp  meson.build  plugin_test.cpp  test_common.h  utils_test.cpp
tests/ModForInjectTest/: meson.build  modforinjecttest.cpp  modforinjecttest.hpp
wintools/man/cat1/: tar.1.txt
wintools/manifest/: tar-1.13-1-bin.mft  tar-1.13-1-bin.ver  tar-1.13-1-dep.mft  tar-1.13-1-dep.ver
